--- a/src/components/WelcomeAnimation/WelcomeAnimation.css
+++ b/src/components/WelcomeAnimation/WelcomeAnimation.css
@@ -12,8 +12,56 @@
 }
 
 .loading {
+  display: flex;
+  font-size: 36px;
+  font-weight: 500;
   color: white;
-  font-size: 4rem;
-  font-weight: bold;
-  justify-content: center;
+}
+
+.loading div {
+  transition: all 0.6s;
+  animation: animate 1.5s infinite;
+  transform: translateX(-40%) translateY(-50%);
+}
+.loading div:nth-child(2) {
+  animation-delay: 0.1s;
+}
+.loading div:nth-child(3) {
+  animation-delay: 0.2s;
+}
+.loading div:nth-child(4) {
+  animation-delay: 0.3s;
+}
+.loading div:nth-child(5) {
+  animation-delay: 0.4s;
+}
+.loading div:nth-child(6) {
+  animation-delay: 0.5s;
+}
+.loading div:nth-child(7) {
+  animation-delay: 0.6s;
+}
+.loading div:nth-child(8) {
+  animation-delay: 0.7s;
+}
+.loading div:nth-child(9) {
+  animation-delay: 0.8s;
+}
+.loading div:nth-child(10) {
+  animation-delay: 0.9s;
+}
+.loading div:nth-child(11) {
+  animation-delay: 1s;
+}
+
+@keyframes animate {
+  0% {
+    transform: translateY(0px);
+  }
+  30% {
+    transform: translateY(-30px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
 }
