--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,24 @@
+@font-face {
+  font-family: 'Source Sans Pro', sans-serif;
+  src: url('./fonts/Source_Sans_Pro/SourceSansPro-ExtraLight.ttf');
+  src: url('./fonts/Source_Sans_Pro/SourceSansPro-Light.ttf');
+  src: url('./fonts/Source_Sans_Pro/SourceSansPro-Regular.ttf');
+  src: url('./fonts/Source_Sans_Pro/SourceSansPro-SemiBold.ttf');
+  src: url('./fonts/Source_Sans_Pro/SourceSansPro-Bold.ttf');
+}
+
 html, body {
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
+  font-family: 'Source Sans Pro', Calibri, Tahoma, sans-serif;
 }
 
 * {
   box-sizing: border-box;
+}
+
+button {
+  font-family: 'Source Sans Pro', Calibri, Tahoma, sans-serif;
 }
