--- a/src/components/Dashboard/NewTrip.css
+++ b/src/components/Dashboard/NewTrip.css
@@ -7,7 +7,7 @@
   width: 100%;
   height: 100%;
   background-color: rgb(0 0 0 / 50%);
-  z-index: 1;
+  z-index: 2;
 }
 
 .modal-main {
@@ -70,14 +70,15 @@
   background-color: #134161;
   color: #F1EBE4;
   margin: 20px auto 0 auto;
-  width: 180px;
+  width: 150px;
   height: 50px;
   padding: 10px;
-  font-size: 24px;
+  font-size: 20px;
   border: none;
   border-radius: 25px;
   box-shadow: 2px 2px 2px rgb(0 0 0 / 20%);
   cursor: pointer;
+  font-family: 'Source Sans Pro', Calibri, Tahoma, sans-serif;
 }
 
 .create-btn:hover:enabled {
